[package]
name = "catpng-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
crc32fast = "1.3.2"
miniz_oxide = { version = "0.7.1", features = ["std"] }
thiserror = "1.0.50"
